--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@
             Story pictures
         </div>
         <div class="story__content">
-            Story content
+            <h3 class="heading-3">
+                Happy Customer
+            </h3>
+            <h2 class="heading-2 headig-2--dark">
+                &ldquo;The best decision of our lives&rdquo;
+            </h2>
+            <p class="story__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">Find your own home</button>
         </div>
         <div class="homes">
             Homes
